#110 - fix alignment of multiline statistics

--- a/sporttracker/static/css/achievements.css
+++ b/sporttracker/static/css/achievements.css
@@ -41,3 +41,7 @@
 .height-60 {
     height: 60%;
 }
+
+.height-75 {
+    height: 75%;
+}
